--- a/assets/scss/target-audience.scss
+++ b/assets/scss/target-audience.scss
@@ -135,6 +135,26 @@
         
         @include flexbox;
         position: relative;
+        
+        &.animate {
+            .design-image-2 {
+                animation: gum-2 1s;
+            }
+            .design-image-3 {
+                animation: gum-3 1s;
+            }
+            .design-image-4 {
+                animation: gum-4 1s;
+            }
+            .design-image-5 {
+                animation: gum-5 1s;
+            }
+            .design-image-6 {
+                animation: gum-6 1s;
+                z-index: 3;
+            }
+        }
+        
     }
     
     .design-image-wrap {
@@ -148,33 +168,58 @@
     }
     .design-image-1 {
         right: 0;
-        width: 247px;
+        width: 32.25%;
     }
     .design-image-2 {
-        right: 160px;
-        width: 165px;
+        width: 21.5%;
         top: 23px;
+        right: 22%;
     }
     .design-image-3 {
-        right: 278px;
-        width: 165px;
+        width: 21.5%;
         top: 22px;
+        right: 37%;
     }
     .design-image-4 {
-        right: 396px;
-        width: 165px;
+        width: 21.5%;
         top: 21px;
+        right: 53%;
     }
     .design-image-5 {
-        right: 493px;
-        width: 232px;
+        width: 30.28%;
         top: -7px;
+        right: 65%;
     }
     .design-image-6 {
-        right: 589px;
-        width: 151px;
+        width: 19.7%;
         top: -8px;
-        z-index: 3;
+        right: 78%;
+    }
+    
+    @keyframes gum-2 {
+        from {right: 10%;}
+        75% {right: 26%;}
+        to {right: 22%;}
+    }
+    @keyframes gum-3 {
+        from {right: 12%;}
+        75% {right: 42%;}
+        to {right: 37%;}
+    }
+    @keyframes gum-4 {
+        from {right: 14%;}
+        75% {right: 57%;}
+        to {right: 53%;}
+    }
+    @keyframes gum-5 {
+        from {right: 14%;}
+        75% {right: 69%;}
+        to {right: 65%;}
+    }
+    @keyframes gum-6 {
+        from {right: 5%;}
+        75% {right: 82%;}
+        to {right: 78%;}
     }
 }
 
@@ -235,6 +280,19 @@
     background-blend-mode: lighten, normal;
     
     .applications-slider {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            width: 50px;
+            background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 100%);
+            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%);
+            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(221, 93, 252) 100%);
+            z-index: 10;
+        }
         .application-slide-wrap {
             @include flexbox;
             align-items: center;
@@ -296,6 +354,10 @@
                 background-size: cover;
                 background-position: center;
             }
+            
+            &:hover {
+                opacity: 0.75;
+            }
         }
         .slick-disabled {
             cursor: auto;
@@ -312,6 +374,17 @@
             right: 25px;
             &:before {
                 background-image: url("../images/arrow.svg");
+            }
+            
+            &.animated {
+                animation: animate 2s;
+    
+                @keyframes animate {
+                    from {right: 15px}
+                    25% {right: 25px;}
+                    50% {right: 15px;}
+                    to {right: 25px;}
+                }
             }
         }
     }
@@ -355,6 +428,15 @@
         flex-grow: 1;
         max-width: 400px;
     }
+    
+    .application-info-content {
+        &.desktop {
+            display: block;
+        }
+        &.mobile {
+            display: none;
+        }
+    }
     .application-info-link {
         max-width: 290px;
         display: inline-block;
@@ -392,6 +474,24 @@
         max-width: 340px;
         .item-title {
             color: #ffffff;
+        }
+        
+        .item-content {
+            a {
+                display: inline-block;
+                img {
+                    max-width: 75%;
+                    width: 100%;
+                    vertical-align: bottom;
+                    transition: filter 0.2s;
+                }
+                
+                &:hover {
+                    img {
+                        filter: drop-shadow(2px 4px 6px black);
+                    }
+                }
+            }
         }
     }
 }
@@ -589,11 +689,18 @@
     }
     
     .item-text {
-        span {
+        a {
             background: linear-gradient(237.62deg, #5287FC 1.77%, #DD5DFC 87.57%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             display: inline-block;
+            @include transition(all 0.2s);
+            &:hover {
+                background: linear-gradient(0deg, #000000 1.77%, #000000 87.57%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                text-decoration: underline;
+            }
         }
     }
     .marketplace-link {
@@ -605,9 +712,17 @@
         background: linear-gradient(237.62deg, #5287FC 1.77%, #DD5DFC 87.57%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        @include transition(all 0.2s);
         img {
             margin-left: 5px;
             vertical-align: bottom;
+        }
+        
+        &:hover {
+            background: linear-gradient(0deg, #000000 1.77%, #000000 87.57%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-decoration: underline;
         }
     }
 }
@@ -726,6 +841,27 @@
     }
 }
 
+@media screen and (max-width: 1550px) {
+    .applications-info-section {
+        .iphone-content-wrap {
+            .slick-slide {
+                height: 447px;
+            }
+        }
+    }
+    .applications-content-wrap {
+        .center-menu-wrap {
+            width: 426px;
+            margin: 0 auto;
+            .iphone-wrap {
+                height: 635px;
+                padding: 46px 86px 143px 90px;
+                background-size: cover;
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 1200px) {
     .application-design-wrap {
         &.content {
@@ -734,32 +870,15 @@
         }
     
         .application-design {
-            width: 60%;
-        }
-        .application-design-image {
-            width: 40%;
-        }
-    }
-    
-    .applications-info-section {
-        .iphone-content-wrap {
-            .slick-slide {
-                height: 447px;
+            h1 {
+                font-size: 52px;
             }
         }
     }
     
-    .applications-content-wrap {
-        .center-menu-wrap {
-            width: 426px;
-            margin: 0;
-            .iphone-wrap {
-                height: 635px;
-                padding: 46px 86px 143px 90px;
-                background-size: cover;
-            }
-        }
-    }
+    
+    
+    
     
     .what-do-you-get-section {
         .what-do-you-get-item {
@@ -816,7 +935,7 @@
     }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 991px) {
     .bg-button-wrapper {
         max-width: 280px;
     }
@@ -837,10 +956,11 @@
     }
     
     .application-design-wrap {
-        padding: 20px 0 30px;
+        padding: 100px 0 30px;
         flex-direction: column;
+        margin-bottom: 50px;
         .application-design {
-            width: 47%;
+            width: 100%;
             h1 {
                 font-size: 30px;
                 margin-bottom: 7px;
@@ -855,8 +975,9 @@
             }
         }
         .application-design-image {
-            width: 100%;
-            min-height: 500px;
+            width: 80%;
+            min-height: 410px;
+            margin: 0 0 0 auto;
         }
     }
     
@@ -872,9 +993,17 @@
         }
     }
     
+    .applications-info-section {
+        .applications-content-wrap {
+            flex-wrap: wrap;
+            margin: 35px 0 75px;
+        }
+        .application-info-wrap {
+            flex-direction: row;
+        }
+    }
+    
     .applications-content-wrap {
-        flex-wrap: wrap;
-        margin: 35px 0 75px;
         .left-menu-wrap {
             max-width: 100%;
             margin-bottom: 50px;
@@ -884,10 +1013,14 @@
                 
             }
         }
-        .application-info-wrap {
-            flex-direction: row;
+        
+        
+        .application-info-link {
+            font-size: 20px;
+            margin-top: -6px;
         }
     }
+    
     
     .applications-info-wrap {
         .item-title {
@@ -977,7 +1110,7 @@
 
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 767px) {
     .section-title {
         font-size: 26px;
     }
@@ -1001,6 +1134,7 @@
         .application-design-image {
             width: auto;
             margin: 0 -26px;
+            //min-height: 280px;
         }
     }
     .what-do-you-get-section {
@@ -1035,27 +1169,44 @@
     }
     .applications-info-section {
         padding: 73px 0 2px;
+        .applications-slider {
+            &:before {
+                width: 20px;
+            }
+        }
         .iphone-content-wrap .slick-slide {
-            height: 464px;
+            height: 382px;
         }
     }
-    
+    .applications-info-section .application-name {
+        font-size: 20px;
+    }
     .applications-content-wrap {
         .left-menu-wrap {
             max-width: 100%;
-            margin-bottom: 50px;
+            margin-bottom: 35px;
             .application-info-content {
                 width: 100%;
-                padding: 0 15px 0 0;
+                padding: 0 15px 20px 0;
                 
             }
         }
+        .application-info-content {
+           
+            &.desktop {
+                display: none;
+            }
+            &.mobile {
+                display: block;
+                margin-bottom: 30px;
+            }
+        }
         .center-menu-wrap {
-            width: 436px;
-            margin: 0 0 0 -40px;
+            width: 363px;
+            margin: 0 0 0 -15px;
             .iphone-wrap {
-                height: 649px;
-                padding: 50px 86px 150px 90px;
+                height: 541px;
+                padding: 51px 73px 109px 76px;
             }
         }
         .application-info-wrap {
@@ -1158,5 +1309,11 @@
         padding: 30px 20px 65px;
         flex-direction: column;
         margin: 0 -20px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .application-design-wrap .application-design-image {
+        min-height: 280px;
     }
 }
