--- a/assets/scss/target-audience.scss
+++ b/assets/scss/target-audience.scss
@@ -290,7 +290,7 @@
             width: 50px;
             background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 100%);
             background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%);
-            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(221, 93, 252) 100%);
+            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #d85dfd 100%);
             z-index: 10;
         }
         .application-slide-wrap {
@@ -686,6 +686,13 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         display: inline-block;
+        @include transition(all 0.2s);
+        
+        &:hover {
+            background: linear-gradient(237.62deg, #000000 100%, #000000 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
     }
     
     .item-text {
