--- a/assets/scss/target-audience.scss
+++ b/assets/scss/target-audience.scss
@@ -173,27 +173,50 @@
     .design-image-2 {
         width: 21.5%;
         top: 23px;
-        right: 22%;
+        //right: 22%;
+        right: 10%;
     }
     .design-image-3 {
         width: 21.5%;
         top: 22px;
-        right: 37%;
+        //right: 37%;
+        right: 12%;
     }
     .design-image-4 {
         width: 21.5%;
         top: 21px;
-        right: 53%;
+        //right: 53%;
+        right: 14%;
     }
     .design-image-5 {
         width: 30.28%;
         top: -7px;
-        right: 65%;
+        //right: 65%;
+        right: 14%;
     }
     .design-image-6 {
         width: 19.7%;
         top: -8px;
-        right: 78%;
+        //right: 78%;
+        right: 5%;
+    }
+    
+    .animate {
+        .design-image-2 {
+            right: 22%;
+        }
+        .design-image-3 {
+            right: 37%;
+        }
+        .design-image-4 {
+            right: 53%;
+        }
+        .design-image-5 {
+            right: 65%;
+        }
+        .design-image-6 {
+            right: 78%;
+        }
     }
     
     @keyframes gum-2 {
@@ -269,6 +292,8 @@
         margin-top: 10px;
         color: #000000;
         font-size: 18px;
+        border: none;
+        cursor: pointer;
         @include border-radius(30px);
         @include color-link(#000000, #000000, 100%);
     }
@@ -430,7 +455,7 @@
         overflow: auto;
         @include scrollbar {
             width: 3px;
-            background-color: rgba(0,0,0,0.2);
+            background-color: #ffffff;
         }
         @include scrollbar-track {
         
@@ -502,7 +527,7 @@
                 display: inline-block;
                 transition: background-color 0.2s;
                 max-width: 250px;
-                margin-bottom: 10px;
+                margin: 15px 0 10px;
                 @include border-radius(8px);
                 
                 img {
@@ -1398,5 +1423,110 @@
 @media screen and (max-width: 380px) {
     .application-design-wrap .application-design-image {
         min-height: 280px;
+    }
+}
+
+
+/*Modal window*/
+body.hidden {
+    overflow: hidden;
+    touch-action: none;
+    -ms-touch-action: none;
+    -webkit-overflow-scrolling: touch;
+    margin-right: 17px;
+}
+.modalOverlay {
+    opacity: 0;
+    visibility: hidden;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 995;
+    @include transition(.3s all);
+    
+    &.active{
+        opacity: 1;
+        visibility: visible;
+    }
+}
+.modalWindow {
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    max-width: 900px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 997;
+    padding: 30px;
+    background-color: #fff;
+    @include border-radius(8px);
+    @include transition(.3s all);
+    @include transform(translate(-50%, -50%));
+    @include box-shadow(0 3px 10px -.5px rgba(0, 0, 0, .2));
+    
+    &.active{
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    @media screen and (max-width: 991px) {
+        max-width: 90%;
+    }
+    
+    @media screen and (max-width: 767px) {
+        max-height: 80vh;
+        height: 100%;
+        padding: 30px 0 30px 30px;
+    }
+}
+
+.modalClose {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    fill: #000000;
+    cursor: pointer;
+    @include transition(.3s all);
+    &:hover {
+        opacity: 0.5;
+    }
+}
+
+.modalContent {
+    .modalTitle {
+        padding: 0;
+        margin: 0 0 25px;
+        font-weight: 700;
+        line-height: 1.1;
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: 0.5px;
+    }
+    .modalText {
+        p {
+            font-family: "Open Sans", sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 1.6;
+            color: #000000;
+            margin-bottom: 10px;
+        }
+    }
+    
+    @media screen and (max-width: 767px) {
+        overflow: auto;
+        height: 100%;
+        padding-right: 30px;
+        .modalText {
+            p {
+                font-size: 16px;
+            }
+        }
     }
 }
